# matrix_project

./: CMakeLists.txt  benchmark_results_multi.csv  benchmark_results_single.csv  gemm.cpp  gemm.hpp  gemm_openblas.hpp  instructions.txt  main.cpp  plt.py  strassen.cpp  strassen.hpp  strassen_multi_3x2x2.cpp  strassen_multi_3x2x2.hpp
